--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-    <title>Всё о Фнаф.</title>
+    <head>
+    <title>Всё о мортле</title>
+    <link rel="stylesheet" href="style.css"/>
+    </head>
     <boody>
      <header style="background-color:black">
          <img src="https://s1.1zoom.ru/big3/733/371037-sepik.jpg" height="100"/>
